--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon-2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="google-site-verification" content="rJaY9fFfCFp7MOwdPlYJpC0mMgB1tY0w24ZKok9-xsM" />
+    <meta
+      name="description"
+      content="Issa Jafari's portfolio showcasing front-end, back-end, and UI/UX projects."
+    />
+    <meta
+      name="keywords"
+      content="Issa Jafari, web developer, portfolio, projects, front-end, back-end"
+    />
+    <meta name="author" content="Issa Jafari" />
+
+    <title>Issa Jafari | Web Developer Portfolio</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Issa Jafari",
+        "jobTitle": "Web Developer",
+        "url": "https://issajafari.com",
+        "sameAs": [
+          "https://www.linkedin.com/in/issa-jafari",
+          "https://github.com/Issa150",
+        ],
+        "image": "https://issajafari.com//assets/imgs/issa jafari.jpg",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Freelance Developer"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
